JavaDoc and bug fixed